--- a/Suppl_Materials_individual_Exp_simple.tex
+++ b/Suppl_Materials_individual_Exp_simple.tex
@@ -505,7 +505,7 @@ Figure \ref{fig:ex4b-dprime-rt} shows \emph{d} prime and reaction times of exper
 \hypertarget{experiment-5-generalization-of-positive-effect}{%
 \section{Experiment 5: Generalization of positive effect}\label{experiment-5-generalization-of-positive-effect}}
 
-So far, we have considered the modulation effect of morality and found that the positive moral valence could enhance the perception. However, we still not sure whether this effect was moral specific or reflecting a more general mechanism of effect of positive valence. To test the specificity of morality, we conducted experiment 5, in which three more categories of stimuli were used (people of different attractiveness, scene of different attractivness, and emotional words with different valence). In this study, participants finished 4 session of association task, each with different categories of stimuli.
+So far, we have considered the modulation effect of morality and found that the positive moral valence could enhance the perception. However, we still not sure whether this effect was moral specific or reflecting a more general mechanism of effect of positive valence. To test the specificity of morality, we conducted experiment 5, in which three more categories of stimuli were used (people of different attractiveness, scene of different attractiveness, and emotional words with different valence). In this study, participants finished 4 sessions of association task, each with different categories of stimuli.
 
 \hypertarget{method-6}{%
 \subsection{Method}\label{method-6}}
@@ -518,17 +518,19 @@ So far, we have considered the modulation effect of morality and found that the 
 \hypertarget{experimental-design-2}{%
 \subsubsection{Experimental design}\label{experimental-design-2}}
 
-A 4 × 3 × 2 within-subject design was used. The first independent variable was stimuli categories (morality, attractiveness of people, attractiveness of scene, and emotional words); the second independent variables is valence (positive, neutral and negative); the third variable was the matching between shape and label (match vs.~mismatch for the association). The task was to learn the association between each geometric shape and the self/other label.
+A 4 × 3 × 2 within-subject design was used. The first independent variable was stimuli categories (morality, attractiveness of people, attractiveness of scene, and emotional words); the second independent variables is valence (positive, neutral, and negative); the third variable was the matching between shape and label (match vs.~mismatch for the association). Same as previous experiment, participants learn the associations between labels and shape and then perform matching tasks.
 
 \hypertarget{stimuli-3}{%
 \subsubsection{Stimuli}\label{stimuli-3}}
 
-4 sets of shapes were included (three circle, three rectangle, three kind of triangle, and three kinds of quadrangle), each set of shape were paired with one category of label, counter-balanced across subjects. Besides the behavioral experiments, participants also finished questionnaires.
+4 sets of shapes were included (three circles, three rectangles, three triangles, and three quadrangles), each set of shape were paired with one category of label, counter-balanced across subjects.
 
 \hypertarget{procedure-8}{%
 \subsubsection{Procedure}\label{procedure-8}}
 
 Participants finish 4 session of experiment, and each include one experiment as in experiment 1. And the order of each category was randomized for each participants. Each session started with a practice, and proceed to formal experiment when reached over 60\% accuracy. Each session included 6 blocks of trial, each with 120 trials.
+
+Participants also finished questionnaires after finished the behavioral tasks.
 
 \hypertarget{descriptive-results-7}{%
 \subsection{Descriptive results}\label{descriptive-results-7}}
@@ -577,7 +579,12 @@ All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-prim
 \hypertarget{descriptive-results-8}{%
 \subsection{Descriptive results}\label{descriptive-results-8}}
 
+\begin{figure}
+\centering
 \includegraphics{Suppl_Materials_individual_Exp_simple_files/figure-latex/ex6a-dprime-rt-1.pdf}
+\caption{\label{fig:ex6a-dprime-rt}RT and \emph{d} prime of Experiment 6a.}
+\end{figure}
+
 Only the behavioral results were reported here. Figure \ref{fig:ex6a-dprime-rt} shows \emph{d} prime and reaction times of experiment 6a.
 
 \hypertarget{experiment-6b-eeg-study-2}{%
