--- a/Suppl_Materials_individual_Exp_simple.rmd
+++ b/Suppl_Materials_individual_Exp_simple.rmd
@@ -89,7 +89,7 @@ pacman::p_load('here',              # for choosing directory
                "qgraph"
                )
 
-source("geom_flat_violin.R")       # for plotting the violin plots
+# source("geom_flat_violin.R")       # for plotting the violin plots
 source('Initial_suppl_simple.r')
 
 
@@ -577,7 +577,7 @@ Figure \@ref(fig:ex6b-d2-dprime-rt) shows *d* prime and reaction times from day 
 
 ```{r personal distance, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 # prepare questionnaire data
-df.scales <- read.csv(here::here("Scale_data", "FADGS_dataset4ID_clean.csv"), header = TRUE, sep = ",",
+df.scales <- read.csv(here::here("scales", "FADGS_dataset4ID_clean.csv"), header = TRUE, sep = ",",
                  stringsAsFactors=FALSE,na.strings=c("","NA")) %>%
   dplyr::mutate(expID = dplyr::case_when(
                                     (expID == "exp1.0") ~ "Exp1a",
