--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,6 +1,6 @@
 ---
-title             : "The good person is me: Spontaneous self-referential process prioritizes moral character in perceptual matching"
-shorttitle        : "The good person is self-related"
+title             : "Spontaneous self-referential processes prioritize moral character in perceptual matching"
+shorttitle        : "Self-referential  moral character"
 
 author: 
   - name          : "Hu Chuan-Peng"
@@ -28,11 +28,11 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Moral character is central to social evaluation and moral judgment. People can form an impression of others' moral character in less than one second. However, whether moral character-related information is prioritized, as compared to neutral characters, in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192), we found a robust prioritization effect of good character-related shapes, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-referential processing. Results of three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when referred to the self but weak or non-exist when referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and the self occurred even when one of them was task-irrelevant. Together, these results not only provide evidence for a robust prioritization effect of good character but also the crucial role of spontaneous self-referential process in the prioritization of good character.
+ Morality is central to social life and our impression of others is dominated by moral character. However, whether moral character-related information is prioritized, as compared to neutral characters, in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task across five experiments (N = 192), in which participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. The results from Bayesian hierarchical modeling, which synthesized data from five experiments, revealed a robust prioritization effect of good character-related shapes, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examined whether the prioritization of good character was due to valence alone or an interaction between valence and self-referential processing. Bayesian models based on three experiments (N = 108) revealed that the prioritization effect of good character was robust when referred to the self but weak or non-exist when referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and the self occurred even when one of them was task-irrelevant. Together, these results not only provide evidence for a robust prioritization effect of good character but also the crucial role of spontaneous self-referential process in the prioritization of good character.
   
  <!-- https://tinyurl.com/ybremelq -->
   
-keywords          : "Perceptual matching, Self positivity bias, moral character"
+keywords          : "Perceptual matching, self positivity bias, moral character, Bayesian hierarchical models"
 wordcount         : "X"
 
 bibliography      : 
@@ -100,11 +100,14 @@ Summary:
         our results
 -->
 
-Morality is one of the basic dimensions in social evaluation [@dunbar_gossip_2004; @ellemers_morality_2018; @goodwin_moral_2014]. People can form an impression of others’ moral character in less than one second [@willis_first_2006]. It is intriguing whether moral character-related information is prioritized in perception. This question evoked much heat a few years ago but remains unsolved. Previous studies have found that stimuli that are also important to humans, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019], are prioritized when attentional resources are limited. Given the importance of morality in social life, moral information should be more salient than morally neutral information and thus be prioritized. Indeed, a few studies reported that bad characters are prioritized in visual processing [@anderson_visual_2011; @eiserbeck_visual_2020], suggesting that bad people are detected faster than neutral or good people. However, results that morally bad information is prioritized are debated. First, the opposite effect, positive bias, was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the robustness of previous results is questioned [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016]. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. 
+Morality is central to human social life [@haidt_morality_2010]. Moral character dominates the social impression of others [@Brambilla_2021] and can be formed quickly [@willis_first_2006]. Given the importance of morality, one might speculate that moral-related information is prioritized in perception when attentional resources are limited, similar to other stimuli that are also important to humans, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Indeed, a few studies reported that bad characters are prioritized in visual processing [@anderson_visual_2011; @eiserbeck_visual_2020], suggesting that bad people are detected faster than neutral or good people. 
 
-Here, we conducted a series of experiments to examine the prioritization effect of moral character. We investigated how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. The associative learning task is based on the well-established fact that humans can quickly learn the associations between symbols and change subsequent behaviors accordingly. This associative learning task is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we repeatedly presented a few pairs of shapes and labels to participants during the task, our results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we further confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
- 
-If moral character information is prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism [@anderson_value_2011]. The positive bias toward moral information, on the other hand, is explained by value-based attention [@shore_social_2013]. However, these explanations often ignore the fact the value is subjective *per se* [@juechems_where_2019]. Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015]. Here, we introduced self-relevance in the social associative learning task. In the experiment, we explicitly instructed participants on which moral character is self-referencing and which is not. In this way, we tested whether the prioritization of moral character is by valence *per se* or by the self-referential of moral valence. In the subsequent experiments, we further tested the interaction between valence and self-referential processing more implicitly. The results revealed a mutual facilitation effect of good character and the self, suggesting spontaneous moral self-referential as a novel mechanism underlying the prioritization of good character in perceptual decision-making.
+However, results that morally bad information is prioritized are debated. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the robustness of previous results is questioned [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016]. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. 
+
+Here, we conducted experiments to examine the prioritization effect of moral character. We investigated how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. The associative learning task is based on the fact that humans can quickly learn associations between symbols and change subsequent behaviors accordingly. This associative learning task is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we further confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
+
+If moral character information is prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by the valence of moral information, and threat detection was supposed to be the potential mechanism [@anderson_value_2011]. The positive bias toward moral information, on the other hand, is explained by the potential positive value of the stimuli [@shore_social_2013]. However, these explanations often ignore the fact that valence and value are subjective *per se* [@juechems_where_2019].  That is, being related to a person, i.e., self-relevance, is the premise of a stimulus or outcome being of value to the person. Previous studies found that merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015]. To explore the role of valence and self-relevance in the prioritization effect of moral information, we included self-relevance as an independent variable and instructed participants on which moral character is self-referencing and which is not. We then tested whether the prioritization of moral character is by valence only or by the interaction between self-relevance and moral valence. The results revealed that prioritization of good character only occurred when they referred to the self of participants. These results were further confirmed in the subsequent experiments, where moral stimuli did not explicitly refer to the self or others but were merely presented together with labels of the self or others. The results revealed a mutual facilitation effect of good character and the self, suggesting spontaneous moral self-referential as a novel mechanism underlying the prioritization of good character in perceptual decision-making.
+
 
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
