--- a/endnote.bib
+++ b/endnote.bib
@@ -846,6 +846,41 @@ Publisher: American Psychological Association},
 	note = {Publisher: {SAGE} Publications Inc}
 }
 
+@article{abele_agency_2007,
+	title = {Agency and communion from the perspective of self versus others},
+	volume = {93},
+	issn = {1939-1315(Electronic),0022-3514(Print)},
+	doi = {10.1037/0022-3514.93.5.751},
+	pages = {751--763},
+	number = {5},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Abele, Andrea E. and Wojciszke, Bogdan},
+	date = {2007},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Agency, Attribution, Independence (Personality), Judgment, Self-Perception, Social Behavior, Social Cognition, Social Perception}
+}
+
+
+@article{abele_bigger_2011,
+	title = {The bigger one of the “{Big} {Two}”? {Preferential} processing of communal information},
+	volume = {47},
+	issn = {0022-1031},
+	shorttitle = {The bigger one of the “{Big} {Two}”?},
+	url = {https://www.sciencedirect.com/science/article/pii/S002210311100093X},
+	doi = {10.1016/j.jesp.2011.03.028},
+	language = {en},
+	number = {5},
+	urldate = {2023-05-16},
+	journal = {Journal of Experimental Social Psychology},
+	author = {Abele, Andrea E. and Bruckmüller, Susanne},
+	month = sep,
+	year = {2011},
+	keywords = {Agency, Categorization speed, Communion, Person perception, Recognition speed, Speed of inferences},
+	pages = {935--948},
+}
+
+
 @article{abele_navigating_2020,
 	title = {Navigating the social world: Toward an integrated framework for evaluating self, individuals, and groups},
 	issn = {1939-1471(Electronic),0033-295X(Print)},
@@ -855,7 +890,6 @@ Publisher: American Psychological Association},
 	author = {Abele, Andrea E. and Ellemers, Naomi and Fiske, Susan T. and Koch, Alex and Yzerbyt, Vincent},
 	date = {2020}
 }
-
 
 @article{dzhelyova_temporal_2012,
 	title = {Temporal dynamics of trustworthiness perception},
@@ -1566,6 +1600,22 @@ Section: Review}
 }
 
 
+@incollection{haidt_morality_2010,
+	edition = {5},
+	title = {Morality},
+	abstract = {This chapter assesses the state of the art in moral psychology from a social-psychological perspective.  We begin with the story of the “great narrowing” — the historical process in which morality got reduced from virtue-based conceptions of the good person down to quandaries about what people should do. We argue for a return to a broader conception of the moral domain that better accommodates the diverse and often group-focused moralities found around the world.  Our review of the empirical research is organized under three principles: 1) Intuitive primacy (but not dictatorship); 2) Moral thinking is for social doing; and 3) Morality binds and builds. We argue that kin selection and reciprocal altruism are just two of many evolutionary processes that shaped human morality. We show how a broader and more group-focused conception of morality fits with emerging ideas about multi-level selection, and with new discoveries about the rapid pace of genetic evolution and the importance of intergroup competition during the last 10,000 years. We close by applying this broader moral perspective to religion and politics.},
+	language = {en},
+	urldate = {2023-05-05},
+	booktitle = {Handbook of {Social} {Psychology}},
+	publisher = {John Wiley \& Sons, Inc.},
+	author = {Haidt, Jonathan and Kesebir, Selin},
+	editor = {Fiske, Susan T. and Gilbert, Daniel T. and Lindzey, Gardner},
+	month = jan,
+	year = {2010},
+	keywords = {ethics, morality, moral psychology, evolution, moral judgment, politics, emotions},
+	pages = {797 -- 832},
+}
+
 @article{rai_moral_2011,
 	title = {Moral psychology is relationship regulation: Moral motives for unity, hierarchy, equality, and proportionality},
 	volume = {118},
@@ -1668,22 +1718,6 @@ Section: Biological Sciences}
 	urldate = {2021-03-22},
 	date = {2019-10-01},
 	langid = {english}
-}
-
-
-@article{abele_agency_2007,
-	title = {Agency and communion from the perspective of self versus others},
-	volume = {93},
-	issn = {1939-1315(Electronic),0022-3514(Print)},
-	doi = {10.1037/0022-3514.93.5.751},
-	pages = {751--763},
-	number = {5},
-	journaltitle = {Journal of Personality and Social Psychology},
-	author = {Abele, Andrea E. and Wojciszke, Bogdan},
-	date = {2007},
-	note = {Place: {US}
-Publisher: American Psychological Association},
-	keywords = {Agency, Attribution, Independence (Personality), Judgment, Self-Perception, Social Behavior, Social Cognition, Social Perception}
 }
 
 
@@ -2141,4 +2175,33 @@ Publisher: American Psychological Association},
 	month = aug,
 	year = {2019},
 	pages = {1541},
+}
+
+
+@article{carruthers_valence_2021,
+	title = {On valence: imperative or representation of value?},
+	issn = {0007-0882},
+	shorttitle = {On valence},
+	url = {https://www.journals.uchicago.edu/doi/abs/10.1086/714985},
+	doi = {10.1086/714985},
+	urldate = {2023-04-07},
+	journal = {The British Journal for the Philosophy of Science},
+	author = {Carruthers, Peter},
+	month = apr,
+	year = {2021},
+}
+
+
+@article{ybarra_young_2001,
+	title = {Young and old adults' concerns about morality and competence},
+	volume = {25},
+	issn = {1573-6644},
+	doi = {10.1023/A:1010633908298},
+	journal = {Motivation and Emotion},
+	author = {Ybarra, Oscar and Chan, Emily and Park, Denise},
+	year = {2001},
+	note = {Place: Germany
+Publisher: Springer},
+	keywords = {Age Differences, Competence, Cues, Morality, Reaction Time, Sensitivity (Personality), Time On Task},
+	pages = {85--100},
 }
